--- a/EmployeesEvaluation.WEB/wwwroot/WebComponents/question-form.html
+++ b/EmployeesEvaluation.WEB/wwwroot/WebComponents/question-form.html
@@ -12,7 +12,7 @@
 <link rel="import" href="/lib/iron-ajax/iron-ajax.html" />
 <link rel="import" href="/lib/iron-input/iron-input.html" />
 <link rel="import" href="/lib/iron-form/iron-form.html" />
-<link rel="import" href="question-card.html" />
+<link rel="import" href="question-card-form.html" />
 
 <dom-module id="question-form">
     <template>
@@ -27,7 +27,7 @@
         <div class="card">
             <form is="iron-form" method="post" action="/Api/Questions/Create" id="questionForm" headers = '{"content-type":"application/json"}'>
 
-               <question-card form-data="{{formData}}" likert-answers="{{likertAnswers}}"></question-card>
+               <question-card-form question-form="{{questionForm}}"></question-card-form>
 
                 <br /><br /><br />
                 <paper-button raised on-tap="_submit">Submit</paper-button>
@@ -43,30 +43,23 @@
     Polymer({
         is: 'question-form',
         properties: {
-            formData: {
+            questionForm: {
                 type: Object,
                 value: {}
-            },
-            likertAnswers: {
-                type: Array,
-                value: function () { return [{}] },
             }
+
         },
         _submit: function (event) {
-
-            this.formData.LikertAnswers = this.likertAnswers;
             this.$.saveQuestion.url = "http://localhost:63585/Api/Questions/Create";
-            this.$.saveQuestion.body = this.formData;
+            this.$.saveQuestion.body = this.questionForm;
 
-            console.log(this.formData);
+            console.log(this.questionForm);
 
             if (Polymer.dom(event).localTarget.parentElement.validate()) {
                 this.$.saveQuestion.generateRequest();
                 console.log("------ validated and request sent ---");
             } else
                 console.log("---- no validated" );
-            
-            //this.$.questionForm.submit();
         },
         handleSubmitResponse: function (event) {
             console.log(event.detail.response);
