fixed input autocomplete description

--- a/EmployeesEvaluation.WEB/wwwroot/WebComponents/evaluation-form.html
+++ b/EmployeesEvaluation.WEB/wwwroot/WebComponents/evaluation-form.html
@@ -107,7 +107,7 @@
                    
                 </paper-toolbar>
                 <autocomplete-example>
-                    <paper-autocomplete  text-property="Description" value-property="Id" bind-value="{{searchText}}" remote-source="true" min-length="2" placeholder="With a placeholder" label="State" id="paperAutocomplete" always-float-lable="true"></paper-autocomplete>
+                    <paper-autocomplete  text-property="Description" value-property="Id" bind-value="{{searchText}}" remote-source="true" min-length="2" placeholder="Enter a question description" label="Use existing Question" id="paperAutocomplete" always-float-lable="true"></paper-autocomplete>
                 </autocomplete-example>
                 <br /><br /><br />
                 <paper-button raised on-tap="_submit">Submit</paper-button>
